--- a/nuxeo-workflow-data-elements.html
+++ b/nuxeo-workflow-data-elements.html
@@ -16,3 +16,4 @@ Contributors:
 -->
 <link rel="import" href="../nuxeo-elements/nx-connection.html">
 <link rel="import" href="nuxeo-workflow-duration.html">
+<link rel="import" href="nuxeo-workflow-instances-count.html">
