--- a/nuxeo-workflow-data-elements.html
+++ b/nuxeo-workflow-data-elements.html
@@ -15,5 +15,4 @@ Contributors:
   Nelson Silva <nsilva@nuxeo.com>
 -->
 <link rel="import" href="../nuxeo-elements/nx-connection.html">
-<link rel="import" href="nuxeo-workflow-duration.html">
-<link rel="import" href="nuxeo-workflow-instances-count.html">
+<link rel="import" href="nuxeo-workflow-metrics.html">
